avancé de la page profilPrivate

--- a/createTournament.html
+++ b/createTournament.html
@@ -121,7 +121,7 @@
                   type="file"
                   id="banner"
                   name="banner"
-                  accept=".jpeg .jpg .webp"
+                  accept="images/*"
                 />
               </label>
 
