section ProfilPrivate terminé

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             <img src="./assets/img/General/user.png" alt="Icone connection" />
             <a href="./formLogin.html">Connection</a>
           </li>
+          <li class="block">
+            <img src="./assets/img/General/user.png" alt="Icone profil" />
+            <a href="./profilPrivate.html"> Mon profil</a>
+          </li>
           <li>
             <img
               src="./assets/img/General/add-user.png"
