--- a/profilPrivate.html
+++ b/profilPrivate.html
@@ -78,6 +78,10 @@
             <img src="./assets/img/General/user.png" alt="Icone connection" />
             <a href="./formLogin.html">Connection</a>
           </li>
+          <li class="block">
+            <img src="./assets/img/General/user.png" alt="Icone profil" />
+            <a href="./profilPrivate.html"> Mon profil</a>
+          </li>
           <li>
             <img
               src="./assets/img/General/add-user.png"
@@ -127,116 +131,127 @@
           <!-- CONTAINER  GENERAL -->
 
           <div class="general box-info">
-            <div class="title-container-profil">
+            <div class="title-container-profil dropdown-general-profil">
               <h2>Général</h2>
               <img
                 src="./assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown-general dropdown"
+                class="dropdown"
               />
             </div>
-            <label for="firstname-user">Nom : </label>
-            <input name="firstname-user" id="firstname-user" type="text" />
-            <label for="secondname-user">Prénom : </label>
-            <input
-              name="secondname-user"
-              id="secondname-user"
-              type="text"
-              required
-            />
-            <label for="nickname-user">Pseudo : </label>
-            <input
-              name="nickname-user"
-              id="nickname-user"
-              type="text"
-              required
-            />
-            <label for="country-user">Pays : </label>
-            <select name="country-user" id="country-user">
-              <option value="" selected>--Choisissez un pays--</option>
-              <option value="france">France</option>
-              <option value="espagne">Espagne</option>
-              <option value="angleterre">angleterre</option>
-              <option value="allemagne">Allemagne</option>
-              <option value="belgique">Belgique</option>
-              <option value="suisse">Suisse</option>
-            </select>
-            <div class="container-cta">
-              <button class="cta">Mettre a jour</button>
+            <div class="box-general box-dropdown">
+              <label for="firstname-user">Nom : </label>
+              <input name="firstname-user" id="firstname-user" type="text" />
+              <label for="secondname-user">Prénom : </label>
+              <input
+                name="secondname-user"
+                id="secondname-user"
+                type="text"
+                required
+              />
+              <label for="nickname-user">Pseudo : </label>
+              <input
+                name="nickname-user"
+                id="nickname-user"
+                type="text"
+                required
+              />
+              <label for="country-user">Pays : </label>
+              <select name="country-user" id="country-user">
+                <option value="" selected>--Choisissez un pays--</option>
+                <option value="france">France</option>
+                <option value="espagne">Espagne</option>
+                <option value="angleterre">angleterre</option>
+                <option value="allemagne">Allemagne</option>
+                <option value="belgique">Belgique</option>
+                <option value="suisse">Suisse</option>
+              </select>
+              <div class="container-cta">
+                <button class="cta">Mettre a jour</button>
+              </div>
             </div>
           </div>
 
           <!-- CONTAINER CHANGE PASSWORD -->
           <div class="change-password box-info">
-            <div class="title-container-profil">
+            <div class="title-container-profil dropdown-change-password">
               <h2>Changement de mot de passe</h2>
               <img
                 src="./assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown-change-password dropdown"
+                class="dropdown"
               />
             </div>
-            <label for="password-now">Mot de passe actuel : </label>
-            <input name="password-now" id="password-now" type="password" />
-            <label for="new-password">Nouveau mot de passe : </label>
-            <input
-              name="new-password"
-              id="new-password"
-              type="password"
-              required
-            />
-            <label for="again-password"
-              >Retapez votre nouveau mot de passe :
-            </label>
-            <input
-              name="again-password"
-              id="again-password"
-              type="password"
-              required
-            />
-            <div class="container-cta">
-              <button class="cta">Mettre a jour</button>
+            <div class="box-change-password box-dropdown">
+              <label for="password-now">Mot de passe actuel : </label>
+              <input name="password-now" id="password-now" type="password" />
+              <label for="new-password">Nouveau mot de passe : </label>
+              <input
+                name="new-password"
+                id="new-password"
+                type="password"
+                required
+              />
+              <label for="again-password"
+                >Retapez votre nouveau mot de passe :
+              </label>
+              <input
+                name="again-password"
+                id="again-password"
+                type="password"
+                required
+              />
+              <div class="container-cta">
+                <button class="cta">Mettre a jour</button>
+              </div>
             </div>
           </div>
 
           <!-- CONTAINER CHANGE EMAIL -->
           <div class="change-mail box-info">
-            <div class="title-container-profil">
+            <div class="title-container-profil dropdown-change-mail">
               <h2>Changement d'email</h2>
               <img
                 src="./assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown-change-mail dropdown"
+                class="dropdown"
               />
             </div>
-            <label for="password-now-mail">Mot de passe actuel : </label>
-            <input name="password-now-mail" id="password-now-mail" type="password" />
-            <label for="new-mail">Nouvelle email : </label>
-            <input
-              name="new-mail"
-              id="new-mail"
-              type="text"
-              required
-            />
-            <div class="container-cta">
-              <button class="cta">Mettre a jour</button>
+            <div class="box-change-mail box-dropdown">
+              <label for="password-now-mail">Mot de passe actuel : </label>
+              <input
+                name="password-now-mail"
+                id="password-now-mail"
+                type="password"
+              />
+              <label for="new-mail">Nouvelle email : </label>
+              <input name="new-mail" id="new-mail" type="text" required />
+              <div class="container-cta">
+                <button class="cta">Mettre a jour</button>
+              </div>
             </div>
           </div>
 
           <!-- CONTAINER DELETE ACCOUNT -->
           <div class="delete-account box-info">
-            <div class="title-container-profil">
+            <div class="title-container-profil dropdown-delete-account">
               <h2>Supprimer mon compte</h2>
               <img
                 src="./assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown-delete-account dropdown"
+                class="dropdown"
               />
             </div>
-            <label for="firstname-user">Mot de passe actuel : </label>
-            <input name="firstname-user" id="firstname-user" type="password" />
-            <div class="container-cta">
-              <button class="cta">Mettre a jour</button>
+            <div class="box-delete box-dropdown">
+              <label for="delete-account">Mot de passe actuel : </label>
+              <input
+                name="delete-account"
+                id="delete-account"
+                type="password"
+              />
+              <div class="container-cta">
+                <button class="cta">Mettre a jour</button>
+              </div>
             </div>
           </div>
         </div>
@@ -244,113 +259,189 @@
 
       <!-- HISTORIQUE DES TOURNOIS -->
       <div class="container-history">
-        <div class="history-tournament-profil">
-          <div class="container-card ">
+        <div class="history-tournament-profil dropdown-history-profil">
+          <div class="container-card">
             <div class="title-container-profil">
               <h2>Historique de mes tournois</h2>
               <img
                 src="./assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown-info dropdown"
+                class="dropdown"
               />
             </div>
-            
+
             <!-- carte tournois -->
-            <div class="card-tournament">
-              <div class="banner-card-tournament"></div>
-              <h4>
-                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-              </h4>
-              <div class="info-date-tournament">
-                <img
-                  src="./assets/img/General/schedule.png"
-                  alt="Icone calendrier"
-                />
-                <p>Tue dec 24</p>
-                <img src="./assets/img/General/clock.png" alt="Icone horloge" />
-                <p>19:00 AM CET</p>
-                <p>in 3 days</p>
+            <div class="box-history-profil box-dropdown">
+              <div class="card-tournament">
+                <div class="banner-card-tournament"></div>
+                <h4>
+                  T1 tournament | 16 teams | direct elimination | Cashprize
+                  2500RP
+                </h4>
+                <div class="info-date-tournament">
+                  <img
+                    src="./assets/img/General/schedule.png"
+                    alt="Icone calendrier"
+                  />
+                  <p>Tue dec 24</p>
+                  <img
+                    src="./assets/img/General/clock.png"
+                    alt="Icone horloge"
+                  />
+                  <p>19:00 AM CET</p>
+                  <p>in 3 days</p>
+                </div>
+                <div class="divider-card"></div>
+                <h5>Région</h5>
+                <div class="divider-card"></div>
+                <h6>Nom de l'organisateur</h6>
               </div>
-              <div class="divider-card"></div>
-              <h5>Région</h5>
-              <div class="divider-card"></div>
-              <h6>Nom de l'organisateur</h6>
-            </div>
-            <!-- fin carte tournoi -->
-            <!-- carte tournois -->
-            <div class="card-tournament">
-              <div class="banner-card-tournament"></div>
-              <h4>
-                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-              </h4>
-              <div class="info-date-tournament">
-                <img
-                  src="./assets/img/General/schedule.png"
-                  alt="Icone calendrier"
-                />
-                <p>Tue dec 24</p>
-                <img src="./assets/img/General/clock.png" alt="Icone horloge" />
-                <p>19:00 AM CET</p>
-                <p>in 3 days</p>
+              <!-- fin carte tournoi -->
+              <!-- carte tournois -->
+              <div class="card-tournament">
+                <div class="banner-card-tournament"></div>
+                <h4>
+                  T1 tournament | 16 teams | direct elimination | Cashprize
+                  2500RP
+                </h4>
+                <div class="info-date-tournament">
+                  <img
+                    src="./assets/img/General/schedule.png"
+                    alt="Icone calendrier"
+                  />
+                  <p>Tue dec 24</p>
+                  <img
+                    src="./assets/img/General/clock.png"
+                    alt="Icone horloge"
+                  />
+                  <p>19:00 AM CET</p>
+                  <p>in 3 days</p>
+                </div>
+                <div class="divider-card"></div>
+                <h5>Région</h5>
+                <div class="divider-card"></div>
+                <h6>Nom de l'organisateur</h6>
               </div>
-              <div class="divider-card"></div>
-              <h5>Région</h5>
-              <div class="divider-card"></div>
-              <h6>Nom de l'organisateur</h6>
-            </div>
-            <!-- fin carte tournoi -->
-            <!-- carte tournois -->
-            <div class="card-tournament">
-              <div class="banner-card-tournament"></div>
-              <h4>
-                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-              </h4>
-              <div class="info-date-tournament">
-                <img
-                  src="./assets/img/General/schedule.png"
-                  alt="Icone calendrier"
-                />
-                <p>Tue dec 24</p>
-                <img src="./assets/img/General/clock.png" alt="Icone horloge" />
-                <p>19:00 AM CET</p>
-                <p>in 3 days</p>
+              <!-- fin carte tournoi -->
+              <!-- carte tournois -->
+              <div class="card-tournament">
+                <div class="banner-card-tournament"></div>
+                <h4>
+                  T1 tournament | 16 teams | direct elimination | Cashprize
+                  2500RP
+                </h4>
+                <div class="info-date-tournament">
+                  <img
+                    src="./assets/img/General/schedule.png"
+                    alt="Icone calendrier"
+                  />
+                  <p>Tue dec 24</p>
+                  <img
+                    src="./assets/img/General/clock.png"
+                    alt="Icone horloge"
+                  />
+                  <p>19:00 AM CET</p>
+                  <p>in 3 days</p>
+                </div>
+                <div class="divider-card"></div>
+                <h5>Région</h5>
+                <div class="divider-card"></div>
+                <h6>Nom de l'organisateur</h6>
               </div>
-              <div class="divider-card"></div>
-              <h5>Région</h5>
-              <div class="divider-card"></div>
-              <h6>Nom de l'organisateur</h6>
-            </div>
-            <!-- fin carte tournoi -->
-            <!-- carte tournois -->
-            <div class="card-tournament">
-              <div class="banner-card-tournament"></div>
-              <h4>
-                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-              </h4>
-              <div class="info-date-tournament">
-                <img
-                  src="./assets/img/General/schedule.png"
-                  alt="Icone calendrier"
-                />
-                <p>Tue dec 24</p>
-                <img src="./assets/img/General/clock.png" alt="Icone horloge" />
-                <p>19:00 AM CET</p>
-                <p>in 3 days</p>
+              <!-- fin carte tournoi -->
+              <!-- carte tournois -->
+              <div class="card-tournament">
+                <div class="banner-card-tournament"></div>
+                <h4>
+                  T1 tournament | 16 teams | direct elimination | Cashprize
+                  2500RP
+                </h4>
+                <div class="info-date-tournament">
+                  <img
+                    src="./assets/img/General/schedule.png"
+                    alt="Icone calendrier"
+                  />
+                  <p>Tue dec 24</p>
+                  <img
+                    src="./assets/img/General/clock.png"
+                    alt="Icone horloge"
+                  />
+                  <p>19:00 AM CET</p>
+                  <p>in 3 days</p>
+                </div>
+                <div class="divider-card"></div>
+                <h5>Région</h5>
+                <div class="divider-card"></div>
+                <h6>Nom de l'organisateur</h6>
               </div>
-              <div class="divider-card"></div>
-              <h5>Région</h5>
-              <div class="divider-card"></div>
-              <h6>Nom de l'organisateur</h6>
+              <!-- fin carte tournoi -->
+              <!-- carte tournois -->
+              <div class="card-tournament">
+                <div class="banner-card-tournament"></div>
+                <h4>
+                  T1 tournament | 16 teams | direct elimination | Cashprize
+                  2500RP
+                </h4>
+                <div class="info-date-tournament">
+                  <img
+                    src="./assets/img/General/schedule.png"
+                    alt="Icone calendrier"
+                  />
+                  <p>Tue dec 24</p>
+                  <img
+                    src="./assets/img/General/clock.png"
+                    alt="Icone horloge"
+                  />
+                  <p>19:00 AM CET</p>
+                  <p>in 3 days</p>
+                </div>
+                <div class="divider-card"></div>
+                <h5>Région</h5>
+                <div class="divider-card"></div>
+                <h6>Nom de l'organisateur</h6>
+              </div>
+              <!-- fin carte tournoi -->
             </div>
-            <!-- fin carte tournoi -->
           </div>
         </div>
       </div>
     </main>
-    <!-- <footer>
+    <footer>
+      <div class="container-footer">
+        <div class="contact">
+          <h3>Contactez-nous</h3>
+          <div class="divider-footer"></div>
+          <p>Adresse Postale: 21 rue des geek 75001 Paris</p>
+          <p>Email : Admin-gt@gaming-tournament.com</p>
+          <p>Téléphone : 01.51.52.41.42. 43</p>
+          <a
+            href="https://www.legalstart.fr/fiches-pratiques/proteger-une-creation/mentions-legales/"
+            target="_blank"
+            class="block"
+            >Mention-légales</a
+          >
+          <a
+            href="https://www.legalstart.fr/fiches-pratiques/relations-commerciales/politique-confidentialite/"
+            target="_blank"
+            class="block"
+            >Politique de confidentialité</a
+          >
+          <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
+            <img src="./assets/img/General/facebook.png" alt="Icone facebook"
+          /></a>
+          <a href="https://www.instagram.com" target="_blank">
+            <img src="./assets/img/General/instagram.png" alt="Icone instagram"
+          /></a>
+          <a href="https://x.com/?lang=fr" target="_blank">
+            <img src="./assets/img/General/twitter.png" alt="Icone twitter"
+          /></a>
+        </div>
 
-      </footer> -->
-
+        <div class="copyright">
+          <p>© 2024 GamingTournament, Incorporation. Tous droit réservés</p>
+        </div>
+      </div>
+    </footer>
     <script src="./assets/javascript/profilPrivate.js"></script>
     <script src="./assets/javascript/animationNavbar.js"></script>
   </body>
