Creation et conception  du fichier TournamentModification

--- a/SignUp.html
+++ b/SignUp.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inscrivez-vous ! 1 / 2</title>
-        <!-- font ROBOTO CONDENSED -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-          href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
-          rel="stylesheet"
-        />
-        <!----------------------------------- -->
+    <!-- font ROBOTO CONDENSED -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!----------------------------------- -->
     <link rel="stylesheet" href="./assets/css/SignUp.css" />
   </head>
   <body>
@@ -23,8 +23,12 @@
 
       <form action="" method="">
         <div class="formSignUpTop">
-          <label for="pseudo">Pseudo :<span class="infoPseudo">*Sera visible par les autres utilisateur</span></label>
-          
+          <label for="pseudo"
+            >Pseudo :<span class="infoPseudo"
+              >*Sera visible par les autres utilisateur</span
+            ></label
+          >
+
           <input
             type="text"
             name="pseudo"
