--- a/TournamentModifcation.html
+++ b/TournamentModifcation.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
       href="./assets/css/createAndModificationTournament.css"
     />
-    <title>Create tournament GamingTournament</title>
+    <title>Modification tournament GamingTournament</title>
   </head>
   <body>
     <header>
@@ -97,7 +97,7 @@
       </nav>
     </header>
     <main>
-      <h1>Création d'un tournoi :</h1>
+      <h1>Modification du tournoi :</h1>
       <!-- enctype="multipart/form-data" pour l'envoie d'image de la banniere(backend) -->
       <form action="" enctype="multipart/form-data">
         <!-- DEBUT D UN CONTAINER DES PARAMETRES  -->
@@ -299,7 +299,7 @@
         </div>
         <!-- FIN CONTAINER PARAMETRES -->
         <div class="container-cta">
-          <button class="cta">Creer le tournoi</button>
+          <button class="cta">Modifier le tournoi</button>
         </div>
       </form>
     </main>
