--- a/formLogin.html
+++ b/formLogin.html
@@ -18,7 +18,10 @@
     <div class="containerLogin">
       <div class="containerLogoLogin">
         <div class="logoLogin">
-          <img src="./assets/img/General/gamingTournamentLoginReSize450x305.jpg" alt="Logo" />
+          <img
+            src="./assets/img/General/gamingTournamentLoginReSize450x305.jpg"
+            alt="Logo"
+          />
         </div>
       </div>
       <div class="containerFormLogin">
@@ -45,7 +48,6 @@
             <a href="#"> Inscrivez-vous </a>
           </p>
         </form>
-     
       </div>
     </div>
   </body>
