--- a/tournamentSheet.html
+++ b/tournamentSheet.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <!-- NAVBAR TOP mobile qui sera display: none avec @media -->
-                    <!-- menu hamb fait maison -->
+      <!-- menu hamb fait maison -->
       <nav class="nav-top">
         <div class="icon-hamb">
           <div class="container-icon btn-1">
@@ -88,14 +88,8 @@
         </ul>
       </nav>
     </header>
-    <main>
-
-
-    </main>
-    <footer>
-
-        
-    </footer>
+    <main></main>
+    <footer></footer>
 
     <script src="./assets/javascript/tournamentSheet.js"></script>
     <script src="./assets/javascript/animationNavbar.js"></script>
