modif ajout dossier HTML et modif des chemins de chaque fichier

--- a/html/SignUp.html
+++ b/html/SignUp.html
@@ -12,12 +12,12 @@
       rel="stylesheet"
     />
     <!----------------------------------- -->
-    <link rel="stylesheet" href="./assets/css/SignUp.css" />
+    <link rel="stylesheet" href="../assets/css/SignUp.css" />
   </head>
   <body>
     <div class="containerSignUp">
       <img
-        src="./assets/img/General/gamingTournamentSignUp450x305.webp"
+        src="../assets/img/General/gamingTournamentSignUp450x305.webp"
         alt="Logo"
       />
 
