--- a/html/createTournament.html
+++ b/html/createTournament.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./assets/css/footer.css" />
     <link
       rel="stylesheet"
-      href="./assets/css/createAndModificationTournament.css"
+      href="../assets/css/createAndModificationTournament.css"
     />
     <title>Create tournament GamingTournament</title>
   </head>
@@ -35,7 +35,7 @@
 
         <img
           class="logo-nav"
-          src="./assets/img/Mobile/gamingTournamentLogo.webp"
+          src="../assets/img/Mobile/gamingTournamentLogo.webp"
           alt="Logo Gaming Tournament"
         />
       </nav>
@@ -46,49 +46,49 @@
         <ul>
           <li class="logo-side-navbar" alt="Logo gaming tournament"></li>
           <li>
-            <img src="./assets/img/General/home.png" alt="Icone accueil" />
+            <img src="../assets/img/General/home.png" alt="Icone accueil" />
             <a href="./index.html">Accueil</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/calendar.png"
+              src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
             <a href="">Mes tournois</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/crown.png"
+              src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
-            <a href="./assets/css/createTournament.css">Créer tournois</a>
+            <a href="../assets/css/createTournament.css">Créer tournois</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/play-button.png"
+              src="../assets/img/General/play-button.png"
               alt="Icone accueil"
             />
             <a href="">Jouer</a>
           </li>
           <li class="divider-nav"></li>
           <li>
-            <img src="./assets/img/General/feedback.png" alt="Icone feedback" />
+            <img src="../assets/img/General/feedback.png" alt="Icone feedback" />
             <a href="">Feedback</a>
           </li>
         </ul>
         <ul>
           <li class="divider-nav"></li>
           <li class="block">
-            <img src="./assets/img/General/user.png" alt="Icone connection" />
+            <img src="../assets/img/General/user.png" alt="Icone connection" />
             <a href="./formLogin.html">Connection</a>
           </li>
           <li class="block">
-            <img src="./assets/img/General/user.png" alt="Icone profil" />
+            <img src="../assets/img/General/user.png" alt="Icone profil" />
             <a href="./profilPrivate.html"> Mon profil</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/add-user.png"
+              src="../assets/img/General/add-user.png"
               alt="Icone inscription"
             />
             <a href="./SignUp.html">Inscription</a>
@@ -106,7 +106,7 @@
             <div class="title-container dropdown-info">
               <h2>Information général</h2>
               <img
-                src="./assets/img/General/arrow-down-sign-to-navigate.png"
+                src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
                 class="dropdown"
               />
@@ -152,7 +152,7 @@
             <div class="title-container dropdown-game">
               <h3>Information du jeu</h3>
               <img
-                src="./assets/img/General/arrow-down-sign-to-navigate.png"
+                src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
                 class="dropdown"
               />
@@ -227,7 +227,7 @@
           <div class="title-container dropdown-structure">
             <h3>Structure du tournoi</h3>
             <img
-              src="./assets/img/General/arrow-down-sign-to-navigate.png"
+              src="../assets/img/General/arrow-down-sign-to-navigate.png"
               alt="fleche pour ouvrir et fermer la fenetre des parametre"
               class="dropdown"
             />
@@ -324,13 +324,13 @@
             >Politique de confidentialité</a
           >
           <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
-            <img src="./assets/img/General/facebook.png" alt="Icone facebook"
+            <img src="../assets/img/General/facebook.png" alt="Icone facebook"
           /></a>
           <a href="https://www.instagram.com" target="_blank">
-            <img src="./assets/img/General/instagram.png" alt="Icone instagram"
+            <img src="../assets/img/General/instagram.png" alt="Icone instagram"
           /></a>
           <a href="https://x.com/?lang=fr" target="_blank">
-            <img src="./assets/img/General/twitter.png" alt="Icone twitter"
+            <img src="../assets/img/General/twitter.png" alt="Icone twitter"
           /></a>
         </div>
 
