--- a/html/formLogin.html
+++ b/html/formLogin.html
@@ -12,14 +12,14 @@
       rel="stylesheet"
     />
     <!----------------------------------- -->
-    <link rel="stylesheet" href="./assets/css/formLogin.css" />
+    <link rel="stylesheet" href="../assets/css/formLogin.css" />
   </head>
   <body>
     <div class="containerLogin">
       <div class="containerLogoLogin">
         <div class="logoLogin">
           <img
-            src="./assets/img/General/gamingTournamentLoginReSize450x305.jpg"
+            src="../assets/img/General/gamingTournamentLoginReSize450x305.jpg"
             alt="Logo"
           />
         </div>
@@ -45,7 +45,7 @@
           <button>Se connecter</button>
           <p class="txtSignIn">
             Pas encore inscrit ?
-            <a href="#"> Inscrivez-vous </a>
+            <a href="./SignUp.html"> Inscrivez-vous </a>
           </p>
         </form>
       </div>
