--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <!----------------------------------- -->
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="stylesheet" href="../assets/css/index.css" />
   </head>
 
   <body>
@@ -43,49 +43,49 @@
         <ul>
           <li class="logo-side-navbar" alt="Logo gaming tournament"></li>
           <li>
-            <img src="./assets/img/General/home.png" alt="Icone accueil" />
+            <img src="../assets/img/General/home.png" alt="Icone accueil" />
             <a href="./index.html">Accueil</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/calendar.png"
+              src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
             <a href="">Mes tournois</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/crown.png"
+              src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
             <a href="./createTournament.html">Créer tournois</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/play-button.png"
+              src="../assets/img/General/play-button.png"
               alt="Icone accueil"
             />
             <a href="">Jouer</a>
           </li>
           <li class="divider-nav"></li>
           <li>
-            <img src="./assets/img/General/feedback.png" alt="Icone feedback" />
+            <img src="../assets/img/General/feedback.png" alt="Icone feedback" />
             <a href="">Feedback</a>
           </li>
         </ul>
         <ul>
           <li class="divider-nav"></li>
           <li class="block">
-            <img src="./assets/img/General/user.png" alt="Icone connection" />
+            <img src="../assets/img/General/user.png" alt="Icone connection" />
             <a href="./formLogin.html">Connection</a>
           </li>
           <li class="block">
-            <img src="./assets/img/General/user.png" alt="Icone profil" />
+            <img src="../assets/img/General/user.png" alt="Icone profil" />
             <a href="./profilPrivate.html"> Mon profil</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/add-user.png"
+              src="../assets/img/General/add-user.png"
               alt="Icone inscription"
             />
             <a href="./SignUp.html">Inscription</a>
@@ -109,7 +109,7 @@
 
             <img
               class="img-banner"
-              src="./assets/img/Mobile/Banniere Mobile.webp"
+              src="../assets/img/Mobile/Banniere Mobile.webp"
               alt="Manette de playstation"
             />
           </div>
@@ -163,11 +163,11 @@
             </h4>
             <div class="info-date-tournament">
               <img
-                src="./assets/img/General/schedule.png"
+                src="../assets/img/General/schedule.png"
                 alt="Icone calendrier"
               />
               <p>Tue dec 24</p>
-              <img src="./assets/img/General/clock.png" alt="Icone horloge" />
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
               <p>in 3 days</p>
             </div>
@@ -185,11 +185,11 @@
             </h4>
             <div class="info-date-tournament">
               <img
-                src="./assets/img/General/schedule.png"
+                src="../assets/img/General/schedule.png"
                 alt="Icone calendrier"
               />
               <p>Tue dec 24</p>
-              <img src="./assets/img/General/clock.png" alt="Icone horloge" />
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
               <p>in 3 days</p>
             </div>
@@ -207,11 +207,11 @@
             </h4>
             <div class="info-date-tournament">
               <img
-                src="./assets/img/General/schedule.png"
+                src="../assets/img/General/schedule.png"
                 alt="Icone calendrier"
               />
               <p>Tue dec 24</p>
-              <img src="./assets/img/General/clock.png" alt="Icone horloge" />
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
               <p>in 3 days</p>
             </div>
@@ -229,11 +229,11 @@
             </h4>
             <div class="info-date-tournament">
               <img
-                src="./assets/img/General/schedule.png"
+                src="../assets/img/General/schedule.png"
                 alt="Icone calendrier"
               />
               <p>Tue dec 24</p>
-              <img src="./assets/img/General/clock.png" alt="Icone horloge" />
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
               <p>in 3 days</p>
             </div>
@@ -251,11 +251,11 @@
             </h4>
             <div class="info-date-tournament">
               <img
-                src="./assets/img/General/schedule.png"
+                src="../assets/img/General/schedule.png"
                 alt="Icone calendrier"
               />
               <p>Tue dec 24</p>
-              <img src="./assets/img/General/clock.png" alt="Icone horloge" />
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
               <p>in 3 days</p>
             </div>
@@ -273,11 +273,11 @@
             </h4>
             <div class="info-date-tournament">
               <img
-                src="./assets/img/General/schedule.png"
+                src="../assets/img/General/schedule.png"
                 alt="Icone calendrier"
               />
               <p>Tue dec 24</p>
-              <img src="./assets/img/General/clock.png" alt="Icone horloge" />
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
               <p>in 3 days</p>
             </div>
@@ -295,11 +295,11 @@
             </h4>
             <div class="info-date-tournament">
               <img
-                src="./assets/img/General/schedule.png"
+                src="../assets/img/General/schedule.png"
                 alt="Icone calendrier"
               />
               <p>Tue dec 24</p>
-              <img src="./assets/img/General/clock.png" alt="Icone horloge" />
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
               <p>in 3 days</p>
             </div>
@@ -317,11 +317,11 @@
             </h4>
             <div class="info-date-tournament">
               <img
-                src="./assets/img/General/schedule.png"
+                src="../assets/img/General/schedule.png"
                 alt="Icone calendrier"
               />
               <p>Tue dec 24</p>
-              <img src="./assets/img/General/clock.png" alt="Icone horloge" />
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
               <p>in 3 days</p>
             </div>
@@ -356,13 +356,13 @@
             >Politique de confidentialité</a
           >
           <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
-            <img src="./assets/img/General/facebook.png" alt="Icone facebook"
+            <img src="../assets/img/General/facebook.png" alt="Icone facebook"
           /></a>
           <a href="https://www.instagram.com" target="_blank">
-            <img src="./assets/img/General/instagram.png" alt="Icone instagram"
+            <img src="../assets/img/General/instagram.png" alt="Icone instagram"
           /></a>
           <a href="https://x.com/?lang=fr" target="_blank">
-            <img src="./assets/img/General/twitter.png" alt="Icone twitter"
+            <img src="../assets/img/General/twitter.png" alt="Icone twitter"
           /></a>
         </div>
 
@@ -372,6 +372,6 @@
       </div>
     </footer>
 
-    <script src="./assets/javascript/animationNavbar.js"></script>
+    <script src="../assets/javascript/animationNavbar.js"></script>
   </body>
 </html>
