--- a/html/profilPrivate.html
+++ b/html/profilPrivate.html
@@ -12,9 +12,9 @@
       rel="stylesheet"
     />
     <!----------------------------------- -->
-    <link rel="stylesheet" href="./assets/css/navbar.css" />
-    <link rel="stylesheet" href="./assets/css/footer.css" />
-    <link rel="stylesheet" href="./assets/css/profilPrivate.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/profilPrivate.css" />
   </head>
   <body>
     <header>
@@ -31,7 +31,7 @@
 
         <img
           class="logo-nav"
-          src="./assets/img/Mobile/gamingTournamentLogo.webp"
+          src="../assets/img/Mobile/gamingTournamentLogo.webp"
           alt="Logo Gaming Tournament"
         />
       </nav>
@@ -42,49 +42,49 @@
         <ul>
           <li class="logo-side-navbar" alt="Logo gaming tournament"></li>
           <li>
-            <img src="./assets/img/General/home.png" alt="Icone accueil" />
+            <img src="../assets/img/General/home.png" alt="Icone accueil" />
             <a href="./index.html">Accueil</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/calendar.png"
+              src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
             <a href="">Mes tournois</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/crown.png"
+              src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
-            <a href="./assets/css/createTournament.css">Créer tournois</a>
+            <a href="../assets/css/createTournament.css">Créer tournois</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/play-button.png"
+              src="../assets/img/General/play-button.png"
               alt="Icone accueil"
             />
             <a href="">Jouer</a>
           </li>
           <li class="divider-nav"></li>
           <li>
-            <img src="./assets/img/General/feedback.png" alt="Icone feedback" />
+            <img src="../assets/img/General/feedback.png" alt="Icone feedback" />
             <a href="">Feedback</a>
           </li>
         </ul>
         <ul>
           <li class="divider-nav"></li>
           <li class="block">
-            <img src="./assets/img/General/user.png" alt="Icone connection" />
+            <img src="../assets/img/General/user.png" alt="Icone connection" />
             <a href="./formLogin.html">Connection</a>
           </li>
           <li class="block">
-            <img src="./assets/img/General/user.png" alt="Icone profil" />
+            <img src="../assets/img/General/user.png" alt="Icone profil" />
             <a href="./profilPrivate.html"> Mon profil</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/add-user.png"
+              src="../assets/img/General/add-user.png"
               alt="Icone inscription"
             />
             <a href="./SignUp.html">Inscription</a>
@@ -97,7 +97,7 @@
           <div class="photo">
             <img
               id="photo-profil"
-              src="./assets/img/General/upload_64px.png"
+              src="../assets/img/General/upload_64px.png"
               alt="Photo de profil"
             />
             <input
@@ -110,7 +110,7 @@
           <div class="banner">
             <img
               id="banner-profil"
-              src="./assets/img/General/upload-banner-64px.png"
+              src="../assets/img/General/upload-banner-64px.png"
               alt="Bannière de profil"
             />
             <input
@@ -134,7 +134,7 @@
             <div class="title-container-profil dropdown-general-profil">
               <h2>Général</h2>
               <img
-                src="./assets/img/General/arrow-down-sign-to-navigate.png"
+                src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
                 class="dropdown"
               />
@@ -177,7 +177,7 @@
             <div class="title-container-profil dropdown-change-password">
               <h2>Changement de mot de passe</h2>
               <img
-                src="./assets/img/General/arrow-down-sign-to-navigate.png"
+                src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
                 class="dropdown"
               />
@@ -212,7 +212,7 @@
             <div class="title-container-profil dropdown-change-mail">
               <h2>Changement d'email</h2>
               <img
-                src="./assets/img/General/arrow-down-sign-to-navigate.png"
+                src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
                 class="dropdown"
               />
@@ -237,7 +237,7 @@
             <div class="title-container-profil dropdown-delete-account">
               <h2>Supprimer mon compte</h2>
               <img
-                src="./assets/img/General/arrow-down-sign-to-navigate.png"
+                src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
                 class="dropdown"
               />
@@ -264,7 +264,7 @@
             <div class="title-container-profil">
               <h2>Historique de mes tournois</h2>
               <img
-                src="./assets/img/General/arrow-down-sign-to-navigate.png"
+                src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
                 class="dropdown"
               />
@@ -280,12 +280,12 @@
                 </h4>
                 <div class="info-date-tournament">
                   <img
-                    src="./assets/img/General/schedule.png"
+                    src="../assets/img/General/schedule.png"
                     alt="Icone calendrier"
                   />
                   <p>Tue dec 24</p>
                   <img
-                    src="./assets/img/General/clock.png"
+                    src="../assets/img/General/clock.png"
                     alt="Icone horloge"
                   />
                   <p>19:00 AM CET</p>
@@ -306,12 +306,12 @@
                 </h4>
                 <div class="info-date-tournament">
                   <img
-                    src="./assets/img/General/schedule.png"
+                    src="../assets/img/General/schedule.png"
                     alt="Icone calendrier"
                   />
                   <p>Tue dec 24</p>
                   <img
-                    src="./assets/img/General/clock.png"
+                    src="../assets/img/General/clock.png"
                     alt="Icone horloge"
                   />
                   <p>19:00 AM CET</p>
@@ -332,12 +332,12 @@
                 </h4>
                 <div class="info-date-tournament">
                   <img
-                    src="./assets/img/General/schedule.png"
+                    src="../assets/img/General/schedule.png"
                     alt="Icone calendrier"
                   />
                   <p>Tue dec 24</p>
                   <img
-                    src="./assets/img/General/clock.png"
+                    src="../assets/img/General/clock.png"
                     alt="Icone horloge"
                   />
                   <p>19:00 AM CET</p>
@@ -358,12 +358,12 @@
                 </h4>
                 <div class="info-date-tournament">
                   <img
-                    src="./assets/img/General/schedule.png"
+                    src="../assets/img/General/schedule.png"
                     alt="Icone calendrier"
                   />
                   <p>Tue dec 24</p>
                   <img
-                    src="./assets/img/General/clock.png"
+                    src="../assets/img/General/clock.png"
                     alt="Icone horloge"
                   />
                   <p>19:00 AM CET</p>
@@ -384,12 +384,12 @@
                 </h4>
                 <div class="info-date-tournament">
                   <img
-                    src="./assets/img/General/schedule.png"
+                    src="../assets/img/General/schedule.png"
                     alt="Icone calendrier"
                   />
                   <p>Tue dec 24</p>
                   <img
-                    src="./assets/img/General/clock.png"
+                    src="../assets/img/General/clock.png"
                     alt="Icone horloge"
                   />
                   <p>19:00 AM CET</p>
@@ -427,13 +427,13 @@
             >Politique de confidentialité</a
           >
           <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
-            <img src="./assets/img/General/facebook.png" alt="Icone facebook"
+            <img src="../assets/img/General/facebook.png" alt="Icone facebook"
           /></a>
           <a href="https://www.instagram.com" target="_blank">
-            <img src="./assets/img/General/instagram.png" alt="Icone instagram"
+            <img src="../assets/img/General/instagram.png" alt="Icone instagram"
           /></a>
           <a href="https://x.com/?lang=fr" target="_blank">
-            <img src="./assets/img/General/twitter.png" alt="Icone twitter"
+            <img src="../assets/img/General/twitter.png" alt="Icone twitter"
           /></a>
         </div>
 
@@ -442,7 +442,7 @@
         </div>
       </div>
     </footer>
-    <script src="./assets/javascript/profilPrivate.js"></script>
-    <script src="./assets/javascript/animationNavbar.js"></script>
+    <script src="../assets/javascript/profilPrivate.js"></script>
+    <script src="../assets/javascript/animationNavbar.js"></script>
   </body>
 </html>
