--- a/html/tournamentSheet.html
+++ b/html/tournamentSheet.html
@@ -12,9 +12,9 @@
       rel="stylesheet"
     />
     <!----------------------------------- -->
-    <link rel="stylesheet" href="./assets/css/navbar.css" />
-    <link rel="stylesheet" href="./assets/css/footer.css" />
-    <link rel="stylesheet" href="./assets/css/tournamentSheet.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/tournamentSheet.css" />
   </head>
   <body>
     <header>
@@ -31,7 +31,7 @@
 
         <img
           class="logo-nav"
-          src="./assets/img/Mobile/gamingTournamentLogo.webp"
+          src="../assets/img/Mobile/gamingTournamentLogo.webp"
           alt="Logo Gaming Tournament"
         />
       </nav>
@@ -42,45 +42,45 @@
         <ul>
           <li class="logo-side-navbar" alt="Logo gaming tournament"></li>
           <li>
-            <img src="./assets/img/General/home.png" alt="Icone accueil" />
+            <img src="../assets/img/General/home.png" alt="Icone accueil" />
             <a href="./index.html">Accueil</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/calendar.png"
+              src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
             <a href="">Mes tournois</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/crown.png"
+              src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
-            <a href="./assets/css/createTournament.css">Créer tournois</a>
+            <a href="../assets/css/createTournament.css">Créer tournois</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/play-button.png"
+              src="../assets/img/General/play-button.png"
               alt="Icone accueil"
             />
             <a href="">Jouer</a>
           </li>
           <li class="divider-nav"></li>
           <li>
-            <img src="./assets/img/General/feedback.png" alt="Icone feedback" />
+            <img src="../assets/img/General/feedback.png" alt="Icone feedback" />
             <a href="">Feedback</a>
           </li>
         </ul>
         <ul>
           <li class="divider-nav"></li>
           <li class="block">
-            <img src="./assets/img/General/user.png" alt="Icone connection" />
+            <img src="../assets/img/General/user.png" alt="Icone connection" />
             <a href="./formLogin.html">Connection</a>
           </li>
           <li>
             <img
-              src="./assets/img/General/add-user.png"
+              src="../assets/img/General/add-user.png"
               alt="Icone inscription"
             />
             <a href="./SignUp.html">Inscription</a>
@@ -91,7 +91,7 @@
     <main></main>
     <footer></footer>
 
-    <script src="./assets/javascript/tournamentSheet.js"></script>
-    <script src="./assets/javascript/animationNavbar.js"></script>
+    <script src="../assets/javascript/tournamentSheet.js"></script>
+    <script src="../assets/javascript/animationNavbar.js"></script>
   </body>
 </html>
