correction bug menu déroulant

--- a/html/createTournament.html
+++ b/html/createTournament.html
@@ -12,8 +12,8 @@
       rel="stylesheet"
     />
     <!----------------------------------- -->
-    <link rel="stylesheet" href="./assets/css/navbar.css" />
-    <link rel="stylesheet" href="./assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
     <link
       rel="stylesheet"
       href="../assets/css/createAndModificationTournament.css"
@@ -61,7 +61,7 @@
               src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
-            <a href="../assets/css/createTournament.css">Créer tournois</a>
+            <a href="./createTournament.html">Créer tournois</a>
           </li>
           <li>
             <img
@@ -339,7 +339,7 @@
         </div>
       </div>
     </footer>
-    <script src="./assets/javascript/animationNavbar.js"></script>
-    <script src="./assets/javascript/createAndModificationTournament.js"></script>
+    <script src="../assets/javascript/animationNavbar.js"></script>
+    <script src="../assets/javascript/createAndModificationTournament.js"></script>
   </body>
 </html>
