--- a/html/TournamentModifcation.html
+++ b/html/TournamentModifcation.html
@@ -61,7 +61,7 @@
               src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
-            <a href="../assets/css/createTournament.css">Créer tournois</a>
+            <a href="./createTournament.html">Créer tournois</a>
           </li>
           <li>
             <img
