modif image de départ banner et photo dans profilPrivate

--- a/html/profilPrivate.html
+++ b/html/profilPrivate.html
@@ -97,7 +97,7 @@
           <div class="photo">
             <img
               id="photo-profil"
-              src="../assets/img/General/upload_64px.png"
+              src="../assets/img/General/addPhoto.jpg"
               alt="Photo de profil"
             />
             <input
@@ -110,7 +110,7 @@
           <div class="banner">
             <img
               id="banner-profil"
-              src="../assets/img/General/upload-banner-64px.png"
+              src="../assets/img/General/addPhoto612x612.jpg"
               alt="Bannière de profil"
             />
             <input
