--- a/html/OrganisedTournament.html
+++ b/html/OrganisedTournament.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      GamingTournament : Votre site de création et gestion de tournoi !
+      GamingTournament : Tournois organisés
     </title>
     <!-- font ROBOTO CONDENSED -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,7 +14,9 @@
       rel="stylesheet"
     />
     <!----------------------------------- -->
-    <link rel="stylesheet" href="../assets/css/index.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/organisedTournament.css" />
   </head>
 
   <body>
@@ -69,7 +71,10 @@
           </li>
           <li class="divider-nav"></li>
           <li>
-            <img src="../assets/img/General/feedback.png" alt="Icone feedback" />
+            <img
+              src="../assets/img/General/feedback.png"
+              alt="Icone feedback"
+            />
             <a href="">Feedback</a>
           </li>
         </ul>
@@ -92,70 +97,13 @@
           </li>
         </ul>
       </nav>
-      <!--  BANNER SLOGAN & CTA mobile changement de banniere et mise en page avec @média -->
-      <div class="main-container-header">
-        <div class="container-header">
-          <div class="container-responsiv-header">
-            <h1>CREER, RIVALISER, CONQUERIR</h1>
-            <h2>
-              Rejoignez une communauté de passionnés, relevez des défis, et
-              atteignez les sommets ! Vos victoires commencent ici.
-            </h2>
-            <div class="container-cta-header">
-              <button class="cta">
-                <a href="./SignUp.html">Inscrivez-vous dès maintenant</a>
-              </button>
-            </div>
-
-            <img
-              class="img-banner"
-              src="../assets/img/Mobile/Banniere Mobile.webp"
-              alt="Manette de playstation"
-            />
-          </div>
-        </div>
-      </div>
     </header>
     <main>
-      <!-- SELECT BOX -->
-      <div class="container-selectbox">
-        <form action="" method="">
-          <label for="games-select" aria-label="Choisir un jeu">
-            <select name="games" id="games-select">
-              <option value="" selected>--Choisissez un jeu--</option>
-              <option value="lol">League of legend</option>
-              <option value="fifa">Fifa</option>
-              <option value="fortinite">Fortnite</option>
-              <option value="wow">World of Warcraft</option>
-              <option value="hearthstone">Hearthstone</option>
-            </select>
-          </label>
-          <label for="region-select" aria-label="choisir une région">
-            <select name="region-select" id="region-select">
-              <option value="" selected>--Choisissez une region--</option>
-              <option value="europe">Europe</option>
-              <option value="asie">Asie</option>
-              <option value="amnorth">Amérique du nord</option>
-              <option value="amsouth">Amérique du sud</option>
-            </select>
-          </label>
-          <label for="plateform-select" aria-label="Choisir une plateform">
-            <select name="palteform" id="plateform-select">
-              <option value="" selected>--Choisissez une plateforme--</option>
-              <option value="ps5">PS5</option>
-              <option value="computer">PC</option>
-              <option value="crossplay">Crossplay</option>
-              <option value="switch">Nintendo Switch</option>
-              <option value="xbox">Xbox série X/S</option>
-            </select>
-          </label>
-        </form>
-      </div>
-      <!-- CONTAINER DES TOURNOIS LES + POPULAIRE qui pourront être filtré grace a la select box -->
-      <div class="main-container-tournament">
-        <div class="container-tournament-mostPopular">
-          <h3>Trouver un tournoi :</h3>
-          <!-- carte tournois -->
+        <div class="main-container-organised-tournament">
+            <div class="container-organised-tournament">
+                <h1>Mes tournois organisés :</h1>
+                <div class="box-organised-tournament">
+                    <!-- carte tournois -->
           <div class="card-tournament">
             <div class="banner-card-tournament"></div>
             <h4>
@@ -331,46 +279,50 @@
             <h6>Nom de l'organisateur</h6>
           </div>
           <!-- fin carte tournoi -->
+
+                </div>
+            </div> 
         </div>
-      </div>
     </main>
     <!-- DEBUT FOOTER -->
     <footer>
-      <div class="container-footer">
-        <div class="contact">
-          <h3>Contactez-nous</h3>
-          <div class="divider-footer"></div>
-          <p>Adresse Postale: 21 rue des geek 75001 Paris</p>
-          <p>Email : Admin-gt@gaming-tournament.com</p>
-          <p>Téléphone : 01.51.52.41.42. 43</p>
-          <a
-            href="https://www.legalstart.fr/fiches-pratiques/proteger-une-creation/mentions-legales/"
-            target="_blank"
-            class="block"
-            >Mention-légales</a
-          >
-          <a
-            href="https://www.legalstart.fr/fiches-pratiques/relations-commerciales/politique-confidentialite/"
-            target="_blank"
-            class="block"
-            >Politique de confidentialité</a
-          >
-          <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
-            <img src="../assets/img/General/facebook.png" alt="Icone facebook"
-          /></a>
-          <a href="https://www.instagram.com" target="_blank">
-            <img src="../assets/img/General/instagram.png" alt="Icone instagram"
-          /></a>
-          <a href="https://x.com/?lang=fr" target="_blank">
-            <img src="../assets/img/General/twitter.png" alt="Icone twitter"
-          /></a>
+        <div class="container-footer">
+          <div class="contact">
+            <h3>Contactez-nous</h3>
+            <div class="divider-footer"></div>
+            <p>Adresse Postale: 21 rue des geek 75001 Paris</p>
+            <p>Email : Admin-gt@gaming-tournament.com</p>
+            <p>Téléphone : 01.51.52.41.42. 43</p>
+            <a
+              href="https://www.legalstart.fr/fiches-pratiques/proteger-une-creation/mentions-legales/"
+              target="_blank"
+              class="block"
+              >Mention-légales</a
+            >
+            <a
+              href="https://www.legalstart.fr/fiches-pratiques/relations-commerciales/politique-confidentialite/"
+              target="_blank"
+              class="block"
+              >Politique de confidentialité</a
+            >
+            <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
+              <img src="../assets/img/General/facebook.png" alt="Icone facebook"
+            /></a>
+            <a href="https://www.instagram.com" target="_blank">
+              <img src="../assets/img/General/instagram.png" alt="Icone instagram"
+            /></a>
+            <a href="https://x.com/?lang=fr" target="_blank">
+              <img src="../assets/img/General/twitter.png" alt="Icone twitter"
+            /></a>
+          </div>
+  
+          <div class="copyright">
+            <p>© 2024 GamingTournament, Incorporation. Tous droit réservés</p>
+          </div>
         </div>
+      </footer>
 
-        <div class="copyright">
-          <p>© 2024 GamingTournament, Incorporation. Tous droit réservés</p>
-        </div>
-      </div>
-    </footer>
+
 
     <script src="../assets/javascript/animationNavbar.js"></script>
   </body>
