ajout du href de mes Tournois sur toutes les pages

--- a/html/createTournament.html
+++ b/html/createTournament.html
@@ -54,7 +54,7 @@
               src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
-            <a href="">Mes tournois</a>
+            <a href="./OrganisedTournament.html">Mes tournois</a>
           </li>
           <li>
             <img
@@ -100,8 +100,10 @@
       <h1>Création d'un tournoi :</h1>
       <!-- enctype="multipart/form-data" pour l'envoie d'image de la banniere(backend) -->
       <form action="" enctype="multipart/form-data">
-        <!-- DEBUT D UN CONTAINER DES PARAMETRES  -->
+        <!-- CONTAINER DE INFORMATION GENERAL ET INFORMATION DU JEU  -->
         <div class="responsiv-param">
+
+          <!-- CONTAINER INFORMATION GENERAL -->
           <div class="container-parameter-form">
             <div class="title-container dropdown-info">
               <h2>Information général</h2>
@@ -146,8 +148,9 @@
               </label>
             </div>
           </div>
-          <!-- FIN CONTAINER PARAMETRES -->
-          <!-- DEBUT D UN CONTAINER DES PARAMETRES  -->
+          <!-- FIN CONTAINER INFORMATION GENERAL -->
+           
+          <!-- CONTAINER INFORMATION DU JEU   -->
           <div class="container-parameter-form">
             <div class="title-container dropdown-game">
               <h3>Information du jeu</h3>
@@ -219,8 +222,9 @@
             </div>
           </div>
         </div>
-        <!-- FIN CONTAINER PARAMETRES -->
-        <!-- DEBUT D UN CONTAINER DES PARAMETRES  -->
+        <!-- FIN CONTAINER INFORMATION DU JEU -->
+         
+        <!-- CONTAINER STRUCTURE DU TOURNOI  -->
         <div
           class="container-parameter-form container-parameter-form-structure"
         >
@@ -297,7 +301,9 @@
             </div>
           </div>
         </div>
-        <!-- FIN CONTAINER PARAMETRES -->
+        <!-- FIN CONTAINER STRUCTURE DU TOURNOI -->
+
+
         <div class="container-cta">
           <button class="cta">Creer le tournoi</button>
         </div>
