--- a/html/profilPrivate.html
+++ b/html/profilPrivate.html
@@ -50,7 +50,7 @@
               src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
-            <a href="">Mes tournois</a>
+            <a href="./OrganisedTournament.html">Mes tournois</a>
           </li>
           <li>
             <img
