--- a/html/OrganisedTournament.html
+++ b/html/OrganisedTournament.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      GamingTournament : Tournois organisés
-    </title>
+    <title>GamingTournament : Tournois organisés</title>
     <!-- font ROBOTO CONDENSED -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -99,230 +97,253 @@
       </nav>
     </header>
     <main>
-        <div class="main-container-organised-tournament">
-            <div class="container-organised-tournament">
-                <h1>Mes tournois organisés :</h1>
-                <div class="box-organised-tournament">
-                    <!-- carte tournois -->
-          <div class="card-tournament">
-            <div class="banner-card-tournament"></div>
-            <h4>
-              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-            </h4>
-            <div class="info-date-tournament">
-              <img
-                src="../assets/img/General/schedule.png"
-                alt="Icone calendrier"
-              />
-              <p>Tue dec 24</p>
-              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
-              <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+      <div class="main-container-organised-tournament">
+        <div class="container-organised-tournament">
+          <h1>Mes tournois organisés :</h1>
+          <div class="box-organised-tournament">
+            <!-- carte tournois -->
+            <div class="card-tournament">
+              <div class="banner-card-tournament"></div>
+              <h4>
+                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+              </h4>
+              <div class="info-date-tournament">
+                <img
+                  src="../assets/img/General/schedule.png"
+                  alt="Icone calendrier"
+                />
+                <p>Tue dec 24</p>
+                <img
+                  src="../assets/img/General/clock.png"
+                  alt="Icone horloge"
+                />
+                <p>19:00 AM CET</p>
+                <p>in 3 days</p>
+              </div>
+              <div class="divider-card"></div>
+              <h5>Région</h5>
+              <div class="divider-card"></div>
+              <h6>Nom de l'organisateur</h6>
             </div>
-            <div class="divider-card"></div>
-            <h5>Région</h5>
-            <div class="divider-card"></div>
-            <h6>Nom de l'organisateur</h6>
-          </div>
-          <!-- fin carte tournoi -->
-          <!-- carte tournois -->
-          <div class="card-tournament">
-            <div class="banner-card-tournament"></div>
-            <h4>
-              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-            </h4>
-            <div class="info-date-tournament">
-              <img
-                src="../assets/img/General/schedule.png"
-                alt="Icone calendrier"
-              />
-              <p>Tue dec 24</p>
-              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
-              <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+            <!-- fin carte tournoi -->
+            <!-- carte tournois -->
+            <div class="card-tournament">
+              <div class="banner-card-tournament"></div>
+              <h4>
+                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+              </h4>
+              <div class="info-date-tournament">
+                <img
+                  src="../assets/img/General/schedule.png"
+                  alt="Icone calendrier"
+                />
+                <p>Tue dec 24</p>
+                <img
+                  src="../assets/img/General/clock.png"
+                  alt="Icone horloge"
+                />
+                <p>19:00 AM CET</p>
+                <p>in 3 days</p>
+              </div>
+              <div class="divider-card"></div>
+              <h5>Région</h5>
+              <div class="divider-card"></div>
+              <h6>Nom de l'organisateur</h6>
             </div>
-            <div class="divider-card"></div>
-            <h5>Région</h5>
-            <div class="divider-card"></div>
-            <h6>Nom de l'organisateur</h6>
-          </div>
-          <!-- fin carte tournoi -->
-          <!-- carte tournois -->
-          <div class="card-tournament">
-            <div class="banner-card-tournament"></div>
-            <h4>
-              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-            </h4>
-            <div class="info-date-tournament">
-              <img
-                src="../assets/img/General/schedule.png"
-                alt="Icone calendrier"
-              />
-              <p>Tue dec 24</p>
-              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
-              <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+            <!-- fin carte tournoi -->
+            <!-- carte tournois -->
+            <div class="card-tournament">
+              <div class="banner-card-tournament"></div>
+              <h4>
+                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+              </h4>
+              <div class="info-date-tournament">
+                <img
+                  src="../assets/img/General/schedule.png"
+                  alt="Icone calendrier"
+                />
+                <p>Tue dec 24</p>
+                <img
+                  src="../assets/img/General/clock.png"
+                  alt="Icone horloge"
+                />
+                <p>19:00 AM CET</p>
+                <p>in 3 days</p>
+              </div>
+              <div class="divider-card"></div>
+              <h5>Région</h5>
+              <div class="divider-card"></div>
+              <h6>Nom de l'organisateur</h6>
             </div>
-            <div class="divider-card"></div>
-            <h5>Région</h5>
-            <div class="divider-card"></div>
-            <h6>Nom de l'organisateur</h6>
-          </div>
-          <!-- fin carte tournoi -->
-          <!-- carte tournois -->
-          <div class="card-tournament">
-            <div class="banner-card-tournament"></div>
-            <h4>
-              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-            </h4>
-            <div class="info-date-tournament">
-              <img
-                src="../assets/img/General/schedule.png"
-                alt="Icone calendrier"
-              />
-              <p>Tue dec 24</p>
-              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
-              <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+            <!-- fin carte tournoi -->
+            <!-- carte tournois -->
+            <div class="card-tournament">
+              <div class="banner-card-tournament"></div>
+              <h4>
+                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+              </h4>
+              <div class="info-date-tournament">
+                <img
+                  src="../assets/img/General/schedule.png"
+                  alt="Icone calendrier"
+                />
+                <p>Tue dec 24</p>
+                <img
+                  src="../assets/img/General/clock.png"
+                  alt="Icone horloge"
+                />
+                <p>19:00 AM CET</p>
+                <p>in 3 days</p>
+              </div>
+              <div class="divider-card"></div>
+              <h5>Région</h5>
+              <div class="divider-card"></div>
+              <h6>Nom de l'organisateur</h6>
             </div>
-            <div class="divider-card"></div>
-            <h5>Région</h5>
-            <div class="divider-card"></div>
-            <h6>Nom de l'organisateur</h6>
-          </div>
-          <!-- fin carte tournoi -->
-          <!-- carte tournois -->
-          <div class="card-tournament">
-            <div class="banner-card-tournament"></div>
-            <h4>
-              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-            </h4>
-            <div class="info-date-tournament">
-              <img
-                src="../assets/img/General/schedule.png"
-                alt="Icone calendrier"
-              />
-              <p>Tue dec 24</p>
-              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
-              <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+            <!-- fin carte tournoi -->
+            <!-- carte tournois -->
+            <div class="card-tournament">
+              <div class="banner-card-tournament"></div>
+              <h4>
+                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+              </h4>
+              <div class="info-date-tournament">
+                <img
+                  src="../assets/img/General/schedule.png"
+                  alt="Icone calendrier"
+                />
+                <p>Tue dec 24</p>
+                <img
+                  src="../assets/img/General/clock.png"
+                  alt="Icone horloge"
+                />
+                <p>19:00 AM CET</p>
+                <p>in 3 days</p>
+              </div>
+              <div class="divider-card"></div>
+              <h5>Région</h5>
+              <div class="divider-card"></div>
+              <h6>Nom de l'organisateur</h6>
             </div>
-            <div class="divider-card"></div>
-            <h5>Région</h5>
-            <div class="divider-card"></div>
-            <h6>Nom de l'organisateur</h6>
-          </div>
-          <!-- fin carte tournoi -->
-          <!-- carte tournois -->
-          <div class="card-tournament">
-            <div class="banner-card-tournament"></div>
-            <h4>
-              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-            </h4>
-            <div class="info-date-tournament">
-              <img
-                src="../assets/img/General/schedule.png"
-                alt="Icone calendrier"
-              />
-              <p>Tue dec 24</p>
-              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
-              <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+            <!-- fin carte tournoi -->
+            <!-- carte tournois -->
+            <div class="card-tournament">
+              <div class="banner-card-tournament"></div>
+              <h4>
+                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+              </h4>
+              <div class="info-date-tournament">
+                <img
+                  src="../assets/img/General/schedule.png"
+                  alt="Icone calendrier"
+                />
+                <p>Tue dec 24</p>
+                <img
+                  src="../assets/img/General/clock.png"
+                  alt="Icone horloge"
+                />
+                <p>19:00 AM CET</p>
+                <p>in 3 days</p>
+              </div>
+              <div class="divider-card"></div>
+              <h5>Région</h5>
+              <div class="divider-card"></div>
+              <h6>Nom de l'organisateur</h6>
             </div>
-            <div class="divider-card"></div>
-            <h5>Région</h5>
-            <div class="divider-card"></div>
-            <h6>Nom de l'organisateur</h6>
-          </div>
-          <!-- fin carte tournoi -->
-          <!-- carte tournois -->
-          <div class="card-tournament">
-            <div class="banner-card-tournament"></div>
-            <h4>
-              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-            </h4>
-            <div class="info-date-tournament">
-              <img
-                src="../assets/img/General/schedule.png"
-                alt="Icone calendrier"
-              />
-              <p>Tue dec 24</p>
-              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
-              <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+            <!-- fin carte tournoi -->
+            <!-- carte tournois -->
+            <div class="card-tournament">
+              <div class="banner-card-tournament"></div>
+              <h4>
+                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+              </h4>
+              <div class="info-date-tournament">
+                <img
+                  src="../assets/img/General/schedule.png"
+                  alt="Icone calendrier"
+                />
+                <p>Tue dec 24</p>
+                <img
+                  src="../assets/img/General/clock.png"
+                  alt="Icone horloge"
+                />
+                <p>19:00 AM CET</p>
+                <p>in 3 days</p>
+              </div>
+              <div class="divider-card"></div>
+              <h5>Région</h5>
+              <div class="divider-card"></div>
+              <h6>Nom de l'organisateur</h6>
             </div>
-            <div class="divider-card"></div>
-            <h5>Région</h5>
-            <div class="divider-card"></div>
-            <h6>Nom de l'organisateur</h6>
-          </div>
-          <!-- fin carte tournoi -->
-          <!-- carte tournois -->
-          <div class="card-tournament">
-            <div class="banner-card-tournament"></div>
-            <h4>
-              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
-            </h4>
-            <div class="info-date-tournament">
-              <img
-                src="../assets/img/General/schedule.png"
-                alt="Icone calendrier"
-              />
-              <p>Tue dec 24</p>
-              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
-              <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+            <!-- fin carte tournoi -->
+            <!-- carte tournois -->
+            <div class="card-tournament">
+              <div class="banner-card-tournament"></div>
+              <h4>
+                T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+              </h4>
+              <div class="info-date-tournament">
+                <img
+                  src="../assets/img/General/schedule.png"
+                  alt="Icone calendrier"
+                />
+                <p>Tue dec 24</p>
+                <img
+                  src="../assets/img/General/clock.png"
+                  alt="Icone horloge"
+                />
+                <p>19:00 AM CET</p>
+                <p>in 3 days</p>
+              </div>
+              <div class="divider-card"></div>
+              <h5>Région</h5>
+              <div class="divider-card"></div>
+              <h6>Nom de l'organisateur</h6>
             </div>
-            <div class="divider-card"></div>
-            <h5>Région</h5>
-            <div class="divider-card"></div>
-            <h6>Nom de l'organisateur</h6>
+            <!-- fin carte tournoi -->
           </div>
-          <!-- fin carte tournoi -->
-
-                </div>
-            </div> 
         </div>
+      </div>
     </main>
     <!-- DEBUT FOOTER -->
     <footer>
-        <div class="container-footer">
-          <div class="contact">
-            <h3>Contactez-nous</h3>
-            <div class="divider-footer"></div>
-            <p>Adresse Postale: 21 rue des geek 75001 Paris</p>
-            <p>Email : Admin-gt@gaming-tournament.com</p>
-            <p>Téléphone : 01.51.52.41.42. 43</p>
-            <a
-              href="https://www.legalstart.fr/fiches-pratiques/proteger-une-creation/mentions-legales/"
-              target="_blank"
-              class="block"
-              >Mention-légales</a
-            >
-            <a
-              href="https://www.legalstart.fr/fiches-pratiques/relations-commerciales/politique-confidentialite/"
-              target="_blank"
-              class="block"
-              >Politique de confidentialité</a
-            >
-            <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
-              <img src="../assets/img/General/facebook.png" alt="Icone facebook"
-            /></a>
-            <a href="https://www.instagram.com" target="_blank">
-              <img src="../assets/img/General/instagram.png" alt="Icone instagram"
-            /></a>
-            <a href="https://x.com/?lang=fr" target="_blank">
-              <img src="../assets/img/General/twitter.png" alt="Icone twitter"
-            /></a>
-          </div>
-  
-          <div class="copyright">
-            <p>© 2024 GamingTournament, Incorporation. Tous droit réservés</p>
-          </div>
+      <div class="container-footer">
+        <div class="contact">
+          <h3>Contactez-nous</h3>
+          <div class="divider-footer"></div>
+          <p>Adresse Postale: 21 rue des geek 75001 Paris</p>
+          <p>Email : Admin-gt@gaming-tournament.com</p>
+          <p>Téléphone : 01.51.52.41.42. 43</p>
+          <a
+            href="https://www.legalstart.fr/fiches-pratiques/proteger-une-creation/mentions-legales/"
+            target="_blank"
+            class="block"
+            >Mention-légales</a
+          >
+          <a
+            href="https://www.legalstart.fr/fiches-pratiques/relations-commerciales/politique-confidentialite/"
+            target="_blank"
+            class="block"
+            >Politique de confidentialité</a
+          >
+          <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
+            <img src="../assets/img/General/facebook.png" alt="Icone facebook"
+          /></a>
+          <a href="https://www.instagram.com" target="_blank">
+            <img
+              src="../assets/img/General/instagram.png"
+              alt="Icone instagram"
+          /></a>
+          <a href="https://x.com/?lang=fr" target="_blank">
+            <img src="../assets/img/General/twitter.png" alt="Icone twitter"
+          /></a>
         </div>
-      </footer>
 
-
+        <div class="copyright">
+          <p>© 2024 GamingTournament, Incorporation. Tous droit réservés</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="../assets/javascript/animationNavbar.js"></script>
   </body>
