--- a/html/TournamentModifcation.html
+++ b/html/TournamentModifcation.html
@@ -54,7 +54,7 @@
               src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
-            <a href="">Mes tournois</a>
+            <a href="./OrganisedTournament.html">Mes tournois</a>
           </li>
           <li>
             <img
