--- a/html/tournamentSheet.html
+++ b/html/tournamentSheet.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../assets/css/navbar.css" />
     <link rel="stylesheet" href="../assets/css/footer.css" />
     <link rel="stylesheet" href="../assets/css/tournamentSheet.css" />
-  </head>
+  </head> 
   <body>
     <header>
       <!-- NAVBAR TOP mobile qui sera display: none avec @media -->
@@ -50,7 +50,7 @@
               src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
-            <a href="">Mes tournois</a>
+            <a href="./OrganisedTournament.html">Mes tournois</a>
           </li>
           <li>
             <img
