--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
               src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
-            <a href="./createTournament.html">Créer tournois</a>
+            <a href="../createTournament.html">Créer tournois</a>
           </li>
           <li>
             <img
