--- a/html/tournamentSheet.html
+++ b/html/tournamentSheet.html
@@ -13,7 +13,6 @@
     />
     <!----------------------------------- -->
     <link rel="stylesheet" href="../assets/css/navbar.css" />
-    <link rel="stylesheet" href="../assets/css/footer.css" />
     <link rel="stylesheet" href="../assets/css/tournamentSheet.css" />
   </head>
   <body>
@@ -104,7 +103,7 @@
       </div>
     </header>
     <main>
-      <h1>Feuille du tournoi :</h1>
+      <h1>Feuille du tournoi : <br><em>*Nom du tournoi*</em></h1>
       <div class="main-container-tournament-sheet">
         <div class="info-general-tournament-sheet">
           <div class="title-sheet-tournament">
@@ -208,44 +207,6 @@
         </div>
       </div>
     </main>
-    <!-- <footer>
-      <div class="container-footer">
-        <div class="contact">
-          <h3>Contactez-nous</h3>
-          <div class="divider-footer"></div>
-          <p>Adresse Postale: 21 rue des geek 75001 Paris</p>
-          <p>Email : Admin-gt@gaming-tournament.com</p>
-          <p>Téléphone : 01.51.52.41.42. 43</p>
-          <a
-            href="https://www.legalstart.fr/fiches-pratiques/proteger-une-creation/mentions-legales/"
-            target="_blank"
-            class="block"
-            >Mention-légales</a
-          >
-          <a
-            href="https://www.legalstart.fr/fiches-pratiques/relations-commerciales/politique-confidentialite/"
-            target="_blank"
-            class="block"
-            >Politique de confidentialité</a
-          >
-          <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
-            <img src="../assets/img/General/facebook.png" alt="Icone facebook"
-          /></a>
-          <a href="https://www.instagram.com" target="_blank">
-            <img
-              src="../assets/img/General/instagram.png"
-              alt="Icone instagram"
-          /></a>
-          <a href="https://x.com/?lang=fr" target="_blank">
-            <img src="../assets/img/General/twitter.png" alt="Icone twitter"
-          /></a>
-        </div>
-
-        <div class="copyright">
-          <p>© 2024 GamingTournament, Incorporation. Tous droit réservés</p>
-        </div>
-      </div>
-    </footer> -->
 
     <script src="../assets/javascript/tournamentSheet.js"></script>
     <script src="../assets/javascript/animationNavbar.js"></script>
